...
    private var container: DependencyContainer!


    func scene(_ scene: UIScene, willConnectTo session: UISceneSession, options connectionOptions: UIScene.ConnectionOptions) {
        guard let windowScene = (scene as? UIWindowScene) else { return }
        let window = UIWindow(windowScene: windowScene)
        let mockEnabled = ProcessInfo.processInfo.environment["TEST_MODE"] == "1"
        container = mockEnabled ? MockedDependencyContainer() : DefaultDependencyContainer()
        let coordinator = AppCoordinator(window: window, container: container)
        self.coordinator = coordinator
        coordinator.start()
        self.window = window
    }
...
